[project]
name = "slaythespirebot"
version = "0.1.0"
description = ""
authors = [
    {name = "PedroEgg",email = "pedro.eggg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "spirecomm @ git+https://github.com/ForgottenArbiter/spirecomm.git@master"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
